# metadata-shortener-ios

./: .gitignore  MetadataShortenerApi.podspec  Package.swift  README.md
MetadataShortenerApi.xcodeproj/: project.pbxproj
Sources/: MetadataShortenerApi.swift  SwiftBridgeCore.swift  metadata-shortener.swift
Tests/: MetadataShortenerApiTests.swift
Tests/Resources/: kusama-v15-metadata
bindings/: Cargo.toml  build.rs  build.sh
bindings/src/: lib.rs
bindings/xcframework/metadata_shortener.xcframework/: Info.plist
bindings/xcframework/metadata_shortener.xcframework/ios-arm64-simulator/metadata_shortener.framework/: Info.plist
bindings/xcframework/metadata_shortener.xcframework/ios-arm64-simulator/metadata_shortener.framework/Headers/: metadata-shortener.h
bindings/xcframework/metadata_shortener.xcframework/ios-arm64/Headers/: metadata-shortener.h  module.modulemap
bindings/xcframework/metadata_shortener.xcframework/ios-arm64/metadata_shortener.framework/: Info.plist
bindings/xcframework/metadata_shortener.xcframework/macos-arm64/metadata_shortener.framework/: Info.plist
bindings/xcframework/metadata_shortener.xcframework/macos-arm64/metadata_shortener.framework/Modules/: module.modulemap
