[package]
 edition = '2021'
 name = "metadata-shortener"
 license = 'Apache 2.0'
 version = "0.1.0"

 build = "build.rs"

[lib]
 crate-type = ["staticlib", "cdylib"]

[build-dependencies]
 swift-bridge-build = "0.1"

[dependencies]
 array-bytes = "6.2.2"
merkleized-metadata = { git = "https://github.com/Zondax/merkleized-metadata", default-features = false, rev = "cd1363a2c4702abf34fcc461055f0059b3c32bec" }
 jni = { version = "0.17.0", default-features = false }
 frame-metadata = { version = "16.0.0", features = [ "current" ] }
 codec = { package = "parity-scale-codec", version = "3.6.9", features = [ "derive" ] }
 base64 = "0.22.1"
 swift-bridge = "0.1"